Style about page

--- a/_sass/2-components/_slider.sass
+++ b/_sass/2-components/_slider.sass
@@ -2,6 +2,9 @@
   position: relative
   margin: 0 -1rem
 
+.carousel__item
+  outline: 0
+
 .carousel__paginator
   position: absolute
   bottom: 25rem
