Restyle index page

--- a/_sass/2-components/_buttons.sass
+++ b/_sass/2-components/_buttons.sass
@@ -18,6 +18,17 @@
     color: $white
     box-shadow: $hover-box-shadow
 
+  &--ghost
+    background-color: transparent
+    border: 1px solid $beyond-green
+    color: $beyond-green
+    box-shadow: none
+
+    &:hover
+      background-color: $beyond-green
+      color: $white
+      box-shadow: none
+
   &--beyond
     background-color: $beyond-green
 
