--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -1,20 +1,33 @@
 body.default
 
   section
-    margin: 6rem 0
+    margin: 8rem 0
 
     +grid-media($grid-large)
       margin: 12rem 0
 
+  .section__title, .section__body
+    text-align: center
+
+  .section__title
+    margin-bottom: 1rem
+
   .column-wrapper
     display: flex
     flex-wrap: wrap
+    padding: 2rem
+    box-sizing: border-box
+    margin-top: 4rem
 
     .column
       position: relative
+      padding: 2rem
+      flex-basis: 100%
+      text-align: center
 
       svg
         color: $cat-coding
+        margin-bottom: 2rem
 
       &__title
         margin-bottom: 1rem
@@ -26,70 +39,61 @@ body.default
   .intro
 
     .column-wrapper
-      padding: 2rem
 
       .column
-        text-align: center
-        padding: 2rem
-        flex-basis: 100%
 
         +grid-media($grid-medium)
           flex-basis: calc(100% / 2 - 4rem)
 
-        svg
-          margin-bottom: 2rem
+
+
+
+
+  .business
+
+    .cta
+      margin-top: 4rem
+      margin-left: auto
+      margin-right: auto
+      display: table
+
+    .column-wrapper
+
+      .column
+        flex-direction: column
+
+        +grid-media($grid-medium)
+          flex-basis: calc(100% / 4 - 4rem)
+          align-items: center
+
 
 
 
 
   .app
-    display: flex
-    flex-wrap: wrap
-    margin-left: -2rem
-    margin-right: -2rem
 
     .column-wrapper
-      flex-basis: 100%
-      padding: 2rem
-      margin: 0 2rem
-      box-sizing: border-box
-      align-content: flex-start
 
-      +grid-media($grid-large)
-        flex-basis: calc(50% - 4rem)
+      .column
 
-      &:first-child
-        margin-bottom: 6rem
+        +grid-media($grid-medium)
+          flex-basis: calc(100% / 3 - 4rem)
 
-        +grid-media($grid-large)
-          margin-bottom: 0
+        +grid-media($grid-medium)
 
-      &:nth-child(2)
+          &:not(:last-child):after
+            content: '›'
+            font-size: 12rem
+            color: lighten($gray-light, 30%)
+            position: absolute
+            right: -2rem
+            top: 0
 
-        .column
-          align-items: flex-start
+      .column-2
+        margin: 3rem 0
 
-    .section__title
-      padding: 2rem
-
-    .column
-      display: flex
-      flex-basis: 100%
-      padding: 2rem
-      align-items: flex-start
-      flex-direction: column
-
-      +grid-media($grid-small)
-        flex-direction: row
-        align-items: center
-
-      &__text
-        margin-left: 0
-        margin-top: 2rem
-
-        +grid-media($grid-small)
-          margin-left: 2rem
-          margin-top: 0
+        +grid-media($grid-medium)
+          margin: 0
 
 
 
@@ -98,22 +102,20 @@ body.default
   .news
     margin-left: -2rem
     margin-right: -2rem
-    text-align: center
     position: relative
 
-    .section__title
-      margin: 0 0 1rem
+    .section__title, .section__body
+      margin-left: 2rem
+      margin-right: 2rem
 
-    .section__body
-
-      +grid-media($grid-large)
-        width: 70%
-        margin: 0 auto
+      +grid-media($grid-medium)
+        margin-left: 8rem
+        margin-right: 8rem
 
     .carousel
       position: relative
-      margin: 1rem 0 0
       text-align: left
+      margin-top: 3rem
 
       .card--post
         margin: 2rem
@@ -153,22 +155,7 @@ body.default
       .prev
         left: -3rem
 
-        // +grid-media($grid-huge)
-        //   left: -5rem
-
       .next
         right: -3rem
 
-        // +grid-media($grid-huge)
-        //   right: -5rem
-
-
-
-
-
-  .more
-    text-align: center
-
-    .section__title
-      margin: 2rem 0 1rem
 
