--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -13,6 +13,7 @@ $whitesmoke:                              #f7f7f7
 $white:                                   #ffffff
 
 $base-font-family:                        'ProximaNova-Regular', sans-serif
+$base-font-family-bold:                   'ProximaNova-Bold', sans-serif
 $display-font-family:                     'HelveticaNeue-Bold', sans-serif
 $display-font-family-light:               'HelveticaNeue-Light', sans-serif
 $code-font-family:                        'Roboto Mono', monospace
