--- a/_sass/2-components/_buttons.sass
+++ b/_sass/2-components/_buttons.sass
@@ -6,7 +6,7 @@
   padding: 9px 20px 7px
   margin: 0
   transition: background-color 0.125s ease-in
-  font-weight: bold
+  font-family: $base-font-family-bold
   color: $white
   cursor: pointer
   letter-spacing: .1rem
