Add slider sass

--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -113,7 +113,7 @@ body.default
         margin-right: 8rem
 
     .carousel
-      position: relative
+      // position: relative
       text-align: left
       margin-top: 3rem
 
@@ -132,30 +132,30 @@ body.default
         &:hover, &:focus
           box-shadow: none
 
-    .paginator
-      position: absolute
-      bottom: 25rem
-      left: 0
-      right: 0
+    // .paginator
+    //   position: absolute
+    //   bottom: 25rem
+    //   left: 0
+    //   right: 0
 
-      .prev, .next
-        visibility: hidden
-        position: absolute
-        top: 0
-        font-size: 8rem
-        cursor: pointer
-        color: lighten($gray-light, 20%)
+    //   .prev, .next
+    //     visibility: hidden
+    //     position: absolute
+    //     top: 0
+    //     font-size: 8rem
+    //     cursor: pointer
+    //     color: lighten($gray-light, 20%)
 
-        &.slick-disabled
-          visibility: hidden
+    //     &.slick-disabled
+    //       visibility: hidden
 
-        +grid-media($grid-medium)
-          visibility: visible
+    //     +grid-media($grid-medium)
+    //       visibility: visible
 
-      .prev
-        left: -3rem
+    //   .prev
+    //     left: -3rem
 
-      .next
-        right: -3rem
+    //   .next
+    //     right: -3rem
 
 
