Remove spacers and not used divs and classes

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -6,9 +6,6 @@ body.about
     +grid-media($grid-medium)
       margin: 12rem 0
 
-    .spacer-1
-      height: 1rem
-
     .section__title
       margin-bottom: 1rem
       text-align: center
@@ -119,13 +116,7 @@ body.about
             padding: 2rem
 
           &__title
-            margin-bottom: 1rem
             color: $base-font-color
-
-          &__date
-            color: $gray-light
-            text-align: right
-            font-size: 1.8rem
 
 
 
@@ -207,7 +198,7 @@ body.about
           +grid-media($grid-medium)
             margin-bottom: 0
 
-          A
+          a
             display: block
 
           &__upper
@@ -219,6 +210,7 @@ body.about
 
           &__date
             color: darken($beyond-beige, 5%)
+            margin-bottom: 1rem
 
           &__title
             font-family: $display-font-family
@@ -235,6 +227,7 @@ body.about
 
           &__description
             color: $base-font-color-light
+            margin-bottom: 1rem
 
           &__address
             color: darken($beyond-beige, 20%)
