Change exhibition card layout

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -227,10 +227,10 @@ body.about
 
           &__description
             color: $base-font-color-light
-            margin-bottom: 1rem
+            margin-top: 3rem
 
           &__address
-            color: darken($beyond-beige, 20%)
+            color: darken($beyond-beige, 25%)
             line-height: 1.2
 
           &:hover, &:focus
