Update navbar docs link

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -11,7 +11,7 @@
           <a href="/" class="navigation__link">Home</a>
         </li>
         <li class="navigation__item">
-          <a href="/apps/" class="navigation__link  {% active_menu docs %}">Docs</a>
+          <a href="http://docs.beyondshop.cloud/" class="navigation__link" target="_blank">Docs</a>
         </li>
         <li class="navigation__item">
           <a href="/blog/" class="navigation__link  {% active_menu blog %}">Blog</a>
