--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -53,10 +53,11 @@
     margin-bottom: 2rem
 
   &__main-title
-    margin: 0 0 2rem
+    margin: 0
 
   &__sub-title
     font-family: $base-font-family
+    margin-top: 2rem
 
 .page
   .header
