--- a/_sass/2-components/_slider.sass
+++ b/_sass/2-components/_slider.sass
@@ -21,7 +21,15 @@
       color: lighten($gray-light, 30%)
 
   .prev
-    left: -4rem
+    visibility: hidden
+
+    +grid-media($grid-medium)
+      visibility: visible
+      left: -4rem
 
   .next
-    right: -4rem
+    visibility: hidden
+
+    +grid-media($grid-medium)
+      visibility: visible
+      right: -4rem
