--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -128,8 +128,9 @@ body.default
       margin-top: 3rem
 
       .card--post
-        margin: 2rem
+        margin: 1rem 3rem
         min-height: 320px
+        width: calc(100% - 6rem)
 
         +grid-media($grid-medium)
           min-height: 350px
@@ -138,10 +139,10 @@ body.default
         display: flex
         justify-content: center
         align-items: center
-        
+
       &__item
 
-        A
+        a
           display: block
 
           span
