--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -160,9 +160,11 @@ body.about
           box-sizing: border-box
           padding: 4rem
 
+          &:nth-child(2)
+            margin-top: 50px
+
           &:nth-child(even)
             float: right
-            margin-top: 80px
 
             .card
 
