Update footer terms

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -57,7 +57,7 @@
         <br>
         <li class="list__item"><a href="https://epages.com/contact" target="_blank" class="list__link">Contact</a></li>
         <li class="list__item  list__item--spacer">&middot;</li>
-        <li class="list__item"><a href="/terms-and-conditions/" class="list__link">Terms &amp; Conditions</a></li>
+        <li class="list__item"><a href="https://epages.com/terms-conditions/" target="_blank" class="list__link">Terms &amp; Conditions</a></li>
         <li class="list__item  list__item--spacer">&middot;</li>
         <li class="list__item"><a href="https://www.epages.com/legal-notice/" target="_blank" class="list__link">Legal Notice</a></li>
         <li class="list__item  list__item--spacer">&middot;</li>
