--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -29,7 +29,7 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="/apps/" class="navigation__link">Docs</a>
+            <a href="http://docs.beyondshop.cloud/" class="navigation__link">Docs</a>
           </li>
           <li class="navigation__item  navigation__item--spacer">&middot;</li>
           <li class="navigation__item">
