Make whole channel-area clickable

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -49,6 +49,7 @@ body.about
 
       +grid-media($grid-medium)
         padding: 4rem
+
       ul
         display: flex
         justify-content: space-between
@@ -57,7 +58,7 @@ body.about
         +grid-media($grid-medium)
           flex-direction: row
 
-        li
+        li a
           display: flex
           align-items: center
           margin-bottom: 1rem
