Make icon and channel clickable

--- a/_sass/3-pages/_about.sass
+++ b/_sass/3-pages/_about.sass
@@ -58,20 +58,31 @@ body.about
         +grid-media($grid-medium)
           flex-direction: row
 
-        li
+        li a
           display: flex
           align-items: center
           margin-bottom: 1rem
+          color: $gray-dark
 
           +grid-media($grid-medium)
             margin-bottom: 0
 
           svg
             margin-right: 1.25rem
+            color: $gray-light
             color: $beyond-green
             width: 40px
 
-            &:hover, &:focus
+          span
+            color: $beyond-green
+
+          &:hover, &:focus
+
+            svg
+              color: darken($beyond-green, 10%)
+              transition: $base-transition
+
+            span
               color: darken($beyond-green, 10%)
               transition: $base-transition
 
