Put check it out as a cta

--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -55,8 +55,13 @@ body.default
 
 
   .intro
+    text-align: center
+
+    .section__body
+      margin-bottom: 2rem
 
     .column-wrapper
+      margin-top: 6rem
 
       .column
 
