Restyle more section

--- a/_sass/3-pages/_index.sass
+++ b/_sass/3-pages/_index.sass
@@ -12,6 +12,16 @@ body.default
   .section__title
     margin-bottom: 1rem
 
+  .section__center
+    text-align: center
+
+  .section__margin--bottom
+    margin-bottom: 2rem
+
+  .section__list
+    display: inline-block
+    text-align: center
+
   .card-wrapper
     display: flex
     flex-wrap: wrap
