Add arrow functionality and adapt styles

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -11,7 +11,10 @@
           <a href="/" class="navigation__link">Home</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link  navigation__link--disabled">Docs</a>
+          <a href="#" class="navigation__link  navigation__link--disabled">
+            Docs
+            <i class="fas fa-caret-down"></i>
+          </a>
           <ul class="dropdown">
             <li>
               <a href="http://docs.beyondshop.cloud/" class="dropdown__link" target="_blank">Beyond API</a>
