--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -72,6 +72,7 @@
 
       svg
         display: block
+        color: $beyond-green
 
         +grid-media($grid-medium)
           display: none
@@ -129,12 +130,11 @@
     background: $navbar-background-color
 
 .dropdown
-  background-color: lighten($beyond-blue, 3%)
+  background-color: $beyond-green
   display: none
 
   +grid-media($grid-medium)
     +border-bottom-radius(4px)
-    background-color: $beyond-green
     position: absolute
     left: 50%
     transform: translateX(-50%)
@@ -156,12 +156,13 @@
     color: $white
     padding: 1em
     box-sizing: border-box
-    border-top: $navbar-border
+    border-top: 1px solid lighten($beyond-green, 10%)
 
     +grid-media($grid-medium)
       border-top: 0
       padding: .6rem 1.8rem
 
+    &.navigation__link--active,
     &:hover
       background-color: darken($beyond-green, 10%)
       color: $white
