Update dropdown link paddings

--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -154,12 +154,10 @@
     width: 100%
     white-space: nowrap
     color: $white
-    padding: 1em
+    padding: .7em
     box-sizing: border-box
-    border-top: 1px solid lighten($beyond-green, 10%)
 
     +grid-media($grid-medium)
-      border-top: 0
       padding: .6rem 1.8rem
 
     &.navigation__link--active,
