--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -20,7 +20,7 @@
               <a href="http://docs.beyondshop.cloud/" class="dropdown__link" target="_blank">Beyond API</a>
             </li>
             <li>
-              <a href="/apps/" class="dropdown__link  navigation__link--active">Now API</a>
+              <a href="/apps/" class="dropdown__link  {% active_menu apps %}">Now API</a>
             </li>
           </ul>
         </li>
