Add UX & Design category

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -84,6 +84,7 @@ $cat-methods-and-tools:                   #ed6637
 $cat-on-the-job:                          #944788
 $cat-tech-stories:                        #a2423c
 $cat-techcomm-and-socialmedia:            #8e8e8e
+$cat-ux-and-design:                       #dc679d
 
 $cat-all-categories-hov:                  darken($cat-all-categories, 10%)
 $cat-api-experience-hov:                  darken($cat-api-experience, 10%)
@@ -94,6 +95,7 @@ $cat-methods-and-tools-hov:               darken($cat-methods-and-tools, 10%)
 $cat-on-the-job-hov:                      darken($cat-on-the-job, 10%)
 $cat-tech-stories-hov:                    darken($cat-tech-stories, 10%)
 $cat-techcomm-and-socialmedia-hov:        darken($cat-techcomm-and-socialmedia, 10%)
+$cat-ux-and-design-hov:                   darken($cat-ux-and-design, 10%)
 
 // Forms and cta
 $input-border-color:                      #e0dfd2
