--- a/_sass/2-components/_categories.sass
+++ b/_sass/2-components/_categories.sass
@@ -7,7 +7,7 @@
   flex-wrap: wrap
 
   +grid-media($grid-small)
-    width: 75%
+    width: 80%
 
 .category
   background-color: $whitesmoke
@@ -87,4 +87,11 @@
     &:hover, &--active
       background-color: $cat-techcomm-and-socialmedia
       border: 1px solid $cat-techcomm-and-socialmedia
+      color: white
+
+  &--ux-and-design
+
+    &:hover, &--active
+      background-color: $cat-ux-and-design
+      border: 1px solid $cat-ux-and-design
       color: white
