--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -325,6 +325,13 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         &::before
           border-color: transparent $cat-techcomm-and-socialmedia-hov transparent transparent
 
+      &--ux-and-design
+        background-color: $cat-ux-and-design
+        &:hover
+          background-color: $cat-ux-and-design-hov
+        &::before
+          border-color: transparent $cat-ux-and-design-hov transparent transparent
+
 
     &__body
       padding: 2rem
