Make a category only appear when it has posts

--- a/_includes/components/categories.html
+++ b/_includes/components/categories.html
@@ -1,6 +1,9 @@
 <div class="categories">
   <a class="category  category--all-categories  {% if page.url == '/blog/' %}category--all-categories--active{% endif %}" href="/blog/">All Categories</a>
   {% for category in site.category_list %}
-    <a class="category  category--{{ category[0] }}  {% if page.url contains category[0] %}category--{{ category[0] }}--active{% endif %}" href="/blog/{{ category[0] }}">{{ category[1] }}</a>
+    {% capture category_key %}{{ category[0] }}{% endcapture %}
+    {% if site.categories.[category_key].size > 0 %}
+      <a class="category  category--{{ category[0] }}  {% if page.url contains category[0] %}category--{{ category[0] }}--active{% endif %}" href="/blog/{{ category[0] }}">{{ category[1] }}</a>
+    {% endif %}
   {% endfor %}
 </div>
