--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -33,9 +33,16 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         padding: .2em .4em
 
     ul
+      list-style-type: disc
+
+    ol
+      list-style-type: decimal
+
+    ol, ul
+      list-style-position: inside
+
       li
         margin-left: 1em
-        list-style-type: disc
 
     div:not(.custom-image) img:not(.icon-share), P img:not(.icon-share)
       margin: 2rem 0
