--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <meta http-equiv="Cache-Control" content="public, max-age=28800">
+
   <link rel="icon" type="image/png" href="/assets/img/logos/favicon.ico" sizes="32x32">
 
   <title>{% if page.permalink == '/' %}{{ site.title }}{% else %}{{ page.title }} | {{ site.title }}{% endif %}</title>
@@ -17,7 +19,7 @@
   {% if site.data.seo.[base_url].keywords %}<meta name="keywords" content="{{ site.data.seo.[base_url].keywords | join: ', ' }}">{% endif %}
 
   {% if site.data.seo.[url_base].description %}
-  <meta name="description" content="{{ site.data.seo.[url_base].description }}" property="og:description" />
+    <meta name="description" content="{{ site.data.seo.[url_base].description }}" property="og:description" />
   {% endif %}
 
   {% if site.data.seo.[url_base].keywords %}
