Add and style authors section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,9 @@
       <div class="content-wrapper">
         <div class="card  card--markdown">
           {{ content }}
-          {% include components/post-share.html %}
+          {% include components/authors.html %}
           {% include components/tags.html %}
+          {% include components/post-share.html %}
         </div>
         {% include components/cross-reading.html %}
       </div>
