--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -37,7 +37,7 @@ $widths: 5,10,15,20,25,30,35,40,45,50,100
         margin-left: 1em
         list-style-type: disc
 
-    div:not(.custom-image) img:not(.icon-share), P img:not(.icon-share)
+    div:not(.custom-image .author__image) img:not(.icon-share), P img:not(.icon-share)
       margin: 2rem 0
       margin-left: -$card-margin-mobile
       width: calc(100% + #{$card-margin-mobile} * 2)
